Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
0.4.8-dev-502-g7000fe2
Description
0.4.8-RC-18-g64dcc95 gcc dbg
Install Microsoft Excel Viewer 2007 and try to open a file.
You will see a combobox to select the xls to open.
That dlg does not longer show icons.
0.4.8RC18-MS_ExcelVewer2007.png![]()
0.4.8-RC-18-g64dcc95_MSExcelViewer.log![]()
A regression.
0.4.3RC1_stillOk.png![]()
I very much suspect the same guilty rev as in CORE-14415.
Attachments
Issue Links
- is blocked by
-
CORE-16121 [0.4.12-RC] Regression: reproducible heap assertion at 2nd setup stage when adding additional keyboard layouts
-
- Resolved
-
- is duplicated by
-
CORE-15118 OCR CuneiForm - No icons (regression) appear on the main buttons
-
- Resolved
-
-
CORE-15529 Bulk Rename Utility: File and folder list lacks icons
-
- Resolved
-
-
CORE-15892 Regression, DosBOX 0.74.2 NSIS-installer lacks checkboxes
-
- Resolved
-
- relates to
-
CORE-14415 Regression: Picture and Fax Viewer don't display folder icons in "Save as" dialog.
-
- Closed
-