[0.4.11] revert [NTDLL/LDR] Overhaul sxs work

This reverts commit 0.4.8-dev-502-g
7000fe2340aedfd1c1fc643f50d1aa1036c7530e.

This reverts commit 0.4.8-dev-503-g
f318a25e1059d0a80999ebf649ea215b584c3a0e.

The two changes were done once to work towards better
shim-supporting APIs of newer Windows versions on demand
in the future. Luckily we do not depend on them yet.

Giannis already fixed most regressions of the 2 commits
before branching 0.4.8RC (e.g. 2nd stage theme-selector).

Unfortunately we still have issues atm with the existing mixture
of Wine comctl32 v5 vs v6.
The image-lists of both are not compatible as Giannis told us.

We revert both commits for this release to fix CORE-14433 & CORE-15118
(missing icons due to incompatible image-lists). We can not
simply add a manifest here, because 3rd party apps are affected.

I double-checked, all of those (formerly affected) apps
are working fine and show the icons after the revert:
2nd-stage-theme-selection, MS Excel Viewer 2007 open-dlg,
MSVCPP 6 installer open-dlg, FaxViewer save-dlg,
MS Word Viewer 2003 open-dlg & OCR CuneiForm 12 from CORE-15118

This revert also obsoletes works/fixes like
2f1190400055545a4c35bb315153efa16bb005ff.

like in last release
(cherry picked from commit 11bf8fa04761dd07d55fb73541120bacb7085522)