dll/ntdll/ldr/ldrpe.c
@@ -803,6 +803,7 @@ LdrpWalkImportDescriptor(IN LPWSTR DllPath OPTIONAL,
     return Status;
 }
 
+/* FIXME: This function is missing SxS support */
 NTSTATUS
 NTAPI
 LdrpLoadImportModule(IN PWSTR DllPath OPTIONAL,
@@ -818,13 +819,8 @@ LdrpLoadImportModule(IN PWSTR DllPath OPTIONAL,
     NTSTATUS Status;
     PPEB Peb = RtlGetCurrentPeb();
     PTEB Teb = NtCurrentTeb();
-    UNICODE_STRING RedirectedImpDescName;
-    BOOLEAN RedirectedDll;
 
     DPRINT("LdrpLoadImportModule('%S' '%s' %p %p)\n", DllPath, ImportName, DataTableEntry, Existing);
-
-    RedirectedDll = FALSE;
-    RtlInitEmptyUnicodeString(&RedirectedImpDescName, NULL, 0);
 
     /* Convert import descriptor name to unicode string */
     ImpDescName = &Teb->StaticUnicodeString;
@@ -875,45 +871,65 @@ LdrpLoadImportModule(IN PWSTR DllPath OPTIONAL,
                                              &LdrApiDefaultExtension);
     }
 
-    /* Check if the SxS Assemblies specify another file */
-    Status = RtlDosApplyFileIsolationRedirection_Ustr(TRUE,
-                                                      ImpDescName,
-                                                      &LdrApiDefaultExtension,
-                                                      NULL,
-                                                      &RedirectedImpDescName,
-                                                      &ImpDescName,
-                                                      NULL,
-                                                      NULL,
-                                                      NULL);
-
-    /* Check success */
-    if (NT_SUCCESS(Status))
-    {
-        /* Let Ldrp know */
-        RedirectedDll = TRUE;
-    }
-    else if (Status != STATUS_SXS_KEY_NOT_FOUND)
-    {
-        /* Unrecoverable SxS failure */
-        DPRINT1("LDR: RtlDosApplyFileIsolationRedirection_Ustr failed  with status %x for dll %wZ\n", Status, ImpDescName);
-        goto done;
-    }
-
     /* Check if it's loaded */
     if (LdrpCheckForLoadedDll(DllPath,
                               ImpDescName,
                               TRUE,
-                              RedirectedDll,
+                              FALSE,
                               DataTableEntry))
     {
         /* It's already existing in the list */
         *Existing = TRUE;
-        Status = STATUS_SUCCESS;
-        goto done;
+        return STATUS_SUCCESS;
     }
 
     /* We're loading it for the first time */
     *Existing = FALSE;
+
+#if 0
+    /* Load manifest */
+    {
+        ACTCTX_SECTION_KEYED_DATA data;
+        NTSTATUS status;
+
+        //DPRINT1("find_actctx_dll for %S\n", fullname);
+        //RtlInitUnicodeString(&nameW, libname);
+        data.cbSize = sizeof(data);
+        status = RtlFindActivationContextSectionString(
+                    FIND_ACTCTX_SECTION_KEY_RETURN_HACTCTX, NULL,
+                    ACTIVATION_CONTEXT_SECTION_DLL_REDIRECTION,
+                    ImpDescName,
+                    &data);
+        //if (status != STATUS_SUCCESS) return status;
+        DPRINT1("Status: 0x%08X\n", status);
+
+        if (NT_SUCCESS(status))
+        {
+            ACTIVATION_CONTEXT_ASSEMBLY_DETAILED_INFORMATION *info;
+            SIZE_T needed, size = 1024;
+
+            for (;;)
+            {
+                if (!(info = RtlAllocateHeap(RtlGetProcessHeap(), 0, size)))
+                {
+                    status = STATUS_NO_MEMORY;
+                    goto done;
+                }
+                status = RtlQueryInformationActivationContext(0, data.hActCtx, &data.ulAssemblyRosterIndex,
+                    AssemblyDetailedInformationInActivationContext,
+                    info, size, &needed);
+                if (status == STATUS_SUCCESS) break;
+                if (status != STATUS_BUFFER_TOO_SMALL) goto done;
+                RtlFreeHeap(RtlGetProcessHeap(), 0, info);
+                size = needed;
+            }
+
+            DPRINT("manifestpath === %S\n", info->lpAssemblyManifestPath);
+            DPRINT("DirectoryName === %S\n", info->lpAssemblyDirectoryName);
+        }
+    }
+done:
+#endif
 
     /* Map it */
     Status = LdrpMapDll(DllPath,
@@ -921,13 +937,10 @@ LdrpLoadImportModule(IN PWSTR DllPath OPTIONAL,
                         ImpDescName->Buffer,
                         NULL,
                         TRUE,
-                        RedirectedDll,
+                        FALSE,
                         DataTableEntry);
-    if (!NT_SUCCESS(Status))
-    {
-        DPRINT1("LDR: LdrpMapDll failed  with status %x for dll %wZ\n", Status, ImpDescName);
-        goto done;
-    }
+
+    if (!NT_SUCCESS(Status)) return Status;
 
     /* Walk its import descriptor table */
     Status = LdrpWalkImportDescriptor(DllPath,
@@ -938,9 +951,6 @@ LdrpLoadImportModule(IN PWSTR DllPath OPTIONAL,
         InsertTailList(&Peb->Ldr->InInitializationOrderModuleList,
                        &(*DataTableEntry)->InInitializationOrderLinks);
     }
-
-done:
-    RtlFreeUnicodeString(&RedirectedImpDescName);
 
     return Status;
 }
